client/src/index.css
@import "tailwindcss";

/* Customize the popup close button */
.maplibregl-popup-close-button {
  /* background-color: rgba(0, 0, 0, 0.7) !important; */
  /* color: white !important; */
  /* border-radius: 50% !important; */
  width: 1.5rem !important;
  height: 1.5rem !important;
  /* font-size: 1rem !important; */
  /* line-height: 1 !important; */
  padding: 0 !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  transition: all 0.2s ease !important;
  /* border-width: 2px !important;
  border-color: black !important; */
}

/* .maplibregl-popup-close-button:hover {
  background-color: rgba(0, 0, 0, 0.9) !important;
  transform: scale(1.1) !important;
} */

/* Optional: Customize the popup container */
/* .maplibregl-popup-content {
  border-radius: 12px !important;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15) !important;
  padding: 0 !important;
} */

/* Key colors throughout map: 
#b8d5e5 blue
#d5e5b8 green
#e5b8d5 pink
stone-900: almost-dark text color
stone-200: almost-white text color
stone-100: off-white background color
*/

/* Google Fonts candidates for "THE FILM ATLAS" page title:
Red Rose, Cal Sans, Paytone One, Bungee Shade, Russo One, Black Ops One */

/* :root {
  background-color:;
} */

.font-logo {
  /* font-family: "Black Ops One", sans-serif; */
  font-family: "Cal Sans", "Optima", "Helvetica", sans-serif;
  /* font-family: "Russo One", sans-serif; */
}

/* .font-heading {
  font-family: "Sen", "Optima", "Helvetica", sans-serif;
} */

.font-primary,
.font-heading {
  /* font-family: "Josefin Sans", "Optima", "Helvetica", sans-serif; */
  /* font-family: "Inconsolata", "Optima", "Helvetica", sans-serif; */
  font-family: "Outfit", "Optima", "Helvetica", sans-serif;
  /* font-family: "League Spartan", "Optima", "Helvetica", sans-serif; */
}

@layer components {
  .page-title {
    @apply uppercase font-bold text-xl md:text-2xl lg:text-3xl flex items-center justify-center w-full md:mt-10 mt-5;
  }

  .page-subtitle {
    @apply font-bold text-base md:text-xl lg:text-2xl  w-auto;
  }

  .yourListConsole {
    @apply flex flex-col items-start justify-center mt-10 md:mr-5 lg:mr-8;
  }

  .toggleButton-whole {
    @apply flex flex-col items-center p-2 w-full gap-2 md:flex-row md:justify-center md:gap-5 md:mr-20;
  }

  .toggleButton-label {
    @apply w-[7rem] flex self-center mr-45 md:mr-0 md:ml-0 md:justify-end uppercase text-xs lg:text-sm;
  }

  .toggleButton-buttonsContainer {
    @apply relative bg-gray-200 rounded-full w-[20rem] h-[2.5rem] text-sm lg:text-base lg:w-[25rem];
  }

  .filterButton-container {
    @apply w-[20rem] text-xs lg:text-sm lg:w-[25rem];
  }

  .toggleButton-bg {
    @apply absolute h-full bg-white rounded-full shadow-md transition-all duration-400 ease-in-out;
  }

  .toggleButton-button {
    @apply flex-1 text-center py-2 rounded-full transition-colors duration-300 z-10 flex items-center justify-center text-gray-600;
  }

  .toggleButton-buttonActive {
    @apply text-gray-950 font-semibold;
  }

  .auth-whole {
    @apply fixed flex flex-col items-center w-screen h-screen overflow-hidden bg-black;
  }

  .auth-svgContainer {
    @apply fixed top-0 h-screen bg-black overflow-visible flex flex-row gap-0 scale-200 overflow-hidden;
  }

  .auth-svg {
    @apply scale-100 z-0 border-blue-500 animate-[moveHorizontal_30s_linear_infinite];
  }

  .auth-formContainer {
    @apply mt-35 z-100 bg-white text-gray-900 border-[#b8d5e5] rounded-lg border-5 w-[20rem] relative;
  }

  .auth-form {
    @apply flex flex-col gap-2 w-full items-center text-[16px];
  }

  .auth-formField {
    @apply border-1 p-2 pl-3 w-[18rem] rounded-lg border-gray-300;
  }

  .auth-formSubmitButton {
    @apply rounded-lg w-[18rem] p-2 bg-[#d5e5b8] text-stone-900 font-light hover:border-3 border-[#e5b8d5] transition-all ease-out duration-300;
  }

  .auth-formErrorMessage {
    @apply text-red-500 self-start ml-2;
  }

  .console-button {
    @apply flex items-center gap-1 border-1 rounded-full max-h-[2.5rem];
  }

  .landing-main-img-container {
    @apply overflow-hidden relative text-stone-200;
  }

  .landing-main-img {
    @apply w-screen max-h-[30rem] md:max-h-[40rem] lg:max-h-[45rem] xl:max-h-[50rem] aspect-2/3 object-cover scale-[1];
  }

  .landing-transparent-layer {
    @apply border-0 border-red-500 absolute top-0 left-0 h-[15rem] md:h-[15rem] w-full bg-linear-to-b from-black to-transparent;
  }

  .landing-page-title {
    @apply font-black text-2xl/8 mt-0 md:text-3xl/8 2xl:text-4xl/8 md:mt-5 md:ml-5 lg:ml-7 lg:mb-2;
  }

  .landing-img-text-belowTitle {
    @apply w-full flex mb-5 mt-1 text-sm md:text-base lg:text-lg font-extralight md:ml-5 lg:ml-7;
  }

  .landing-img-text-container {
    @apply absolute top-0 left-0 h-[25rem] p-5 w-full border-0;
  }

  .landing-img-text-right {
    @apply text-sm md:text-base lg:text-lg font-extralight mb-0 text-right md:mr-5 lg:mr-7;
  }

  .landing-img-text-right-title {
    @apply font-thin text-xs md:text-sm lg:text-base mr-1;
  }

  .landing-img-text-right-content {
    @apply p-1 pt-0 inline-block decoration-3 underline-offset-2 drop-shadow-md;
  }

  .landing-transparent-layer-bottom {
    @apply border-0 border-red-500 absolute bottom-0 left-0 h-[5rem] md:h-[15rem] w-full bg-gradient-to-t from-black/100 to-transparent;
  }

  .landing-belowBackdropPadding {
    @apply p-4 md:p-8 lg:pl-12 2xl:pl-20;
  }

  .landing-sectionTitle {
    @apply uppercase font-extralight text-[12px] text-stone-900 lg:text-base;
  }

  .landing-sectionContent {
    @apply text-xl/6 lg:text-2xl/9 font-bold text-balance max-w-[60rem];
  }

  .filmGallery-grid {
    @apply grid gap-6 grid-cols-1 md:grid-cols-2 md:gap-3 lg:gap-3 xl:grid-cols-3 xl:gap-4;
  }

  .filmCard-width {
    @apply w-[22rem] min-w-[22rem] lg:w-[26rem] 2xl:w-[32rem];
  }
}

